# Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: Config.h.in  Food.c  Food.h  Map.c  Map.h  Snake.c  Snake.h  snake.c  tags
src/map/: CMakeLists.txt
test/: testCurses.c
